# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
#

2005-12-08 14:11:53 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-63

    Summary:
      merge fix from the 0.10 branch
    Revision:
      itools--main--0.11--patch-63

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.9--patch-114
       resources, fix for Windows
    
     * jdavid@itaapy.com--public/itools--main--0.10--patch-62
       merge fix from the 0.9 branch
    

    modified files:
     Changelog resources/__init__.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.9--patch-114
     jdavid@itaapy.com--public/itools--main--0.10--patch-62


2005-12-07 17:23:26 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-62

    Summary:
      web, lowercase Set-Cookie parameter names
    Revision:
      itools--main--0.11--patch-62


    modified files:
     Changelog web/response.py


2005-12-07 16:41:45 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-61

    Summary:
      web, downgrade to HTTP 1.0; now cookies always include the path
    Revision:
      itools--main--0.11--patch-61


    modified files:
     Changelog web/response.py


2005-11-01 07:18:55 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-60

    Summary:
      fix setup.py so the command "register" works
    Revision:
      itools--main--0.11--patch-60


    modified files:
     Changelog setup.py


2005-10-30 20:31:22 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-59

    Summary:
      get ready to release 0.11.0
    Revision:
      itools--main--0.11--patch-59


    modified files:
     CHANGES.txt Changelog


2005-10-28 17:21:35 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-58

    Summary:
      html, fix serialization
    Revision:
      itools--main--0.11--patch-58


    modified files:
     Changelog html/HTML.py


2005-10-28 15:43:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-57

    Summary: